# telephone_operator

./: README.md  main.py  pyproject.toml  telephone_operator.py
sample_data/: output.txt  telephone
tests/: test_telephone_operator.py
