[tool.poetry]
name = "telephone-operator"
version = "0.1.0"
description = ""
authors = ["tuan.tran <tuan.tran@parcelperform.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^22.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
